# src/main/java/com/dxc/ppm/delegate/V1ApiDelegateImp.java
@@ -1,29 +1,39 @@
 package com.dxc.ppm.delegate;
 
 import com.dxc.ppm.api.V1ApiDelegate;
+import com.dxc.ppm.api.model.MedicalTreatmentProfile;
+import com.dxc.ppm.api.model.Patient;
+import com.dxc.ppm.service.PatientService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
+
+import java.util.List;
 
 @Component
 public class V1ApiDelegateImp implements V1ApiDelegate {
 
+    @Autowired
+    private PatientService patientService;
+
+
     @Override
-    public ResponseEntity<String> readPatientById(String patientId) {
+    public ResponseEntity<Patient> readPatientById(String patientId) {
         return null;
     }
 
     @Override
-    public ResponseEntity<String> upsertMultiPatients(String json) {
+    public ResponseEntity<List<MedicalTreatmentProfile>> searchPatients(String name, String disease, String medicine) {
         return null;
     }
 
     @Override
-    public ResponseEntity<String> searchPatients(String name, String disease, String medicine) {
+    public ResponseEntity<List<String>> searchTest(String id, String name) {
         return null;
     }
 
     @Override
-    public ResponseEntity<Void> searchTest(String id, String name) {
-        return null;
+    public ResponseEntity<String> upsertMultiPatients(Patient patient) {
+        return ResponseEntity.ok(patientService.upsertMultiPatients(patient));
     }
 }
