# src/main/java/com/dxc/ppm/model/MedicalTestResult.java
@@ -1,10 +1,0 @@
-package com.dxc.ppm.model;
-
-import java.util.List;
-
-public class MedicalTestResult {
-    private String bloodType;
-    private String xray;
-    private String ultraSound;
-    private List<String> allergicMedicines;
-}
