# src/main/java/com/dxc/ppm/model/MedicineEntity.java
@@ -1,0 +1,43 @@
+package com.dxc.ppm.model;
+
+import javax.persistence.*;
+
+@Entity
+@Table(name = "MedicineEntity")
+public class MedicineEntity {
+
+    @Id
+    @Column(name = "ID")
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+
+    @Column(name = "NAME")
+    private String name;
+
+    @Column(name = "QUANTITY")
+    private int quantity;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getQuantity() {
+        return quantity;
+    }
+
+    public void setQuantity(int quantity) {
+        this.quantity = quantity;
+    }
+}
