# src/main/java/com/dxc/ppm/model/Prescription.java
@@ -1,8 +1,0 @@
-package com.dxc.ppm.model;
-
-import java.util.Map;
-
-public class Prescription {
-    Map<String, Integer> recentlyUsed;
-    Map<String, Integer> beingUsed;
-}
